--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.4",
+    "chartjs": "^0.3.24",
     "jquery": "^3.3.1"
   },
   "devDependencies": {
